--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
             <div class="container mx-auto text-center text-gray-400">
                 <!-- LOGO -->
                 <img src="images/logo.png.png" alt="LUSTRAEDI Logo" class="h-12 mx-auto mb-4">
-                <p>For support, contact us: <a href="mailto:support@lustraedi.com" class="underline">support@lustraedi.com</a> or Call <a href="tel:08012345678" class="underline">0801-234-5678</a></p>
+                <p>For support, contact us: <a href="mailto:dan@lustraedi.store" class="underline">dan@lustraedi.store</a> or Call <a href="tel:08085485244" class="underline">0808-548-5244</a></p>
                 <p class="text-sm mt-4">&copy; 2025 LUSTRAEDI. All Rights Reserved.</p>
             </div>
         </footer>
@@ -412,4 +412,5 @@
 
 </body>
 </html>
+
 
