--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
   <header class="py-4 px-6 md:px-12 sticky top-0 z-50 border-b border-gray-800 bg-black/80 backdrop-blur-sm">
     <div class="container mx-auto flex justify-between items-center">
       <a href="index.html" class="nav-link" data-page="home-page">
-        <img src="https://raw.githubusercontent.com/Mide000/Lustraedi-files/main/images/logo.png" alt="LUSTRAEDI Logo" class="h-10">
+        <img src="https://raw.githubusercontent.com/Mide000/Lustraedi-files/main/images/logo.png.png" alt="LUSTRAEDI Logo" class="h-10">
       </a>
       <nav class="hidden md:flex space-x-8 text-gray-300 font-medium">
         <a href="#products" class="hover:text-brand-gold">Our Collection</a>
@@ -244,7 +244,7 @@
 
   <footer class="bg-black border-t border-gray-800 py-8 px-6">
     <div class="container mx-auto text-center text-gray-400">
-      <img src="https://raw.githubusercontent.com/Mide000/Lustraedi-files/main/images/logo.png" class="h-12 mx-auto mb-4">
+      <img src="https://raw.githubusercontent.com/Mide000/Lustraedi-files/main/images/logo.png.png" class="h-12 mx-auto mb-4">
       <p>For support, contact: <a href="mailto:dan@lustraedi.store" class="underline">dan@lustraedi.store</a></p>
       <div class="text-sm mt-4 space-x-2 md:space-x-4">
         <a href="privacy policy.html" class="hover:underline">Privacy Policy</a> | 
@@ -900,3 +900,4 @@
 </body>
 
 </html>
+
